--- a/disk/diskSelect.html
+++ b/disk/diskSelect.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel='stylesheet' type='text/css' href='circleShowcase.css' />
+    <link rel='stylesheet' type='text/css' href='../css/circleShowcase.css' />
 
     <script>
         function showCat(id){
@@ -54,49 +54,49 @@
                 <li><span class="tooltip" onclick="showAlgs('f2f');" onmouseover="showCat('f2f')">Face-To-Face Communication</span></li>
                 <ul id="alglist f2f" class="algs" style="display:none;">
                     <li>
-                        <a href="diskAlgs.html#A">Algorithm A</a>
+                        <a href="circleAlgs.html#A">Algorithm A</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#B">Algorithm B</a>
+                        <a href="circleAlgs.html#B">Algorithm B</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#C">Algorithm C</a>
+                        <a href="circleAlgs.html#C">Algorithm C</a>
                     </li>
                 </ul>
                 <li><span class="tooltip" onclick="showAlgs('wl');" onmouseover="showCat('wl')">Wireless Communication</span></li>
                 <ul id="alglist wl" class="algs" style="display:none;">
                     <li>
-                        <a href="diskAlgs.html#Awl">Algorithm A</a>
+                        <a href="circleAlgs.html#Awl">Algorithm A</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Bwl">Algorithm B</a>
+                        <a href="circleAlgs.html#Bwl">Algorithm B</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Cwl">Algorithm C</a>
+                        <a href="circleAlgs.html#Cwl">Algorithm C</a>
                     </li>
                 </ul>
                 <li><span class="tooltip" onclick="showAlgs('p1');" onmouseover="showCat('p1')">1 Priority + Helper(s)</span></li>
                 <ul id="alglist p1" class="algs" style="display:none;">
                     <li>
-                        <a href="diskAlgs.html#Q1">1 Priority + 1 Helper</a>
+                        <a href="circleAlgs.html#Q1">1 Priority + 1 Helper</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Q2">1 Priority + 2 Helpers</a>
+                        <a href="circleAlgs.html#Q2">1 Priority + 2 Helpers</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Q1S4">1 Priority + 4 Helpers</a>
+                        <a href="circleAlgs.html#Q1S4">1 Priority + 4 Helpers</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Q1S8">1 Priority + 8 Helpers</a>
+                        <a href="circleAlgs.html#Q1S8">1 Priority + 8 Helpers</a>
                     </li>
                 </ul>
                 <li><span class="tooltip" onclick="showAlgs('pm');" onmouseover="showCat('pm')">Multiple Priority + Helper(s)</span></li>
                 <ul id="alglist pm" class="algs" style="display:none;">
                     <li>
-                        <a href="diskAlgs.html#Q2S1">2 Priority + 1 Helper (1)</a>
+                        <a href="circleAlgs.html#Q2S1">2 Priority + 1 Helper (1)</a>
                     </li>
                     <li>
-                        <a href="diskAlgs.html#Q1S1Q1">2 Priority + 1 Helper (2)</a>
+                        <a href="circleAlgs.html#Q1S1Q1">2 Priority + 1 Helper (2)</a>
                     </li>
                 </ul>
             </ul>
