--- a/disk/circleShowcase.html
+++ b/disk/circleShowcase.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel='stylesheet' type='text/css' href='circleShowcase.css' />
+    <link rel='stylesheet' type='text/css' href='../css/circleShowcase.css' />
 
 
 </head>
@@ -27,6 +27,9 @@
             <ul>
                 <li><a href="diskSelect.html">Algorithms on a Disk</a></li>
                 <li><a href="compSelect.html">Compare Disk Algorithms</a></li>
+                <li>
+                    <a href="../polygon/polygonSelect.html">Algorithms on Regular Polygons</a>
+                </li>
             </ul>
         </div>
 
