--- a/disk/comparison.html
+++ b/disk/comparison.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel='stylesheet' type='text/css' href='circleShowcase.css' />
+    <link rel='stylesheet' type='text/css' href='../css/circleShowcase.css' />
 
 
 </head>
